2007-03-03  Fernando Perez  <Fernando.Perez@colorado.edu>

	* ipython1/test/mkdoctests.py: Improve documentation for this
	script, fix a few bugs with filename handling.

2007-02-24  Fernando Perez  <Fernando.Perez@colorado.edu>

	* ipython1/kernel/magic.py (pxrunsource): Don't disable %autopx on
	exceptions, just show the traceback.  Right now the actual tb is
	bogus (it contains local rather than remote info), but the
	exception type and message ARE correct, so it is useful.

	* ipython1/test/mkdoctests.py (main): Improve support for easily
	making standalone .txt files without a template that calls %run,
	just using a regular .py/.ipy file.

2007-02-16  Brian Granger <ellisonbg@gmail.com>

	* multiengine, multienginepb: now testing the targets argument using
	verifyTargets in the MultiEngine itself.  Specific network protocols
	can also test if they want, but _any_ multiengine should now raise
	InvalidEngineID if targets is bad in any way.  Added tests for this.
	
	* config.objects, ipcontroller: there is now the notion of a default
	network interface for each controller interface.  The port/ip of the 
	default connection can now be set using command line flags to 
	ipcontroller.  See config.objects for info on how the default is
	determined.  For now the default is pb.

2007-02-15  Brian Granger <ellisonbg@gmail.com>

	* kernel.pbutil, kernel.enginepb, kernel.multienginepb: added
	rigorous message size testing.  Now any push/pull/scater/gather
	that exceeds pbconfig.banana.SIZE_LIMIT will raise a
	PBMessageSizeError that propagates back to the user.
	
	* kernel.multienginepb:  added calls to verifyTargets at the
	start of every remote_foo method to ensure that we have a valid
	targets argument.  If not InvalidEngineID is raised.  While
	this does require a client-controller communication, it does a
	real check against the list of registered engines as well as checks
	that targets is an int, 'all' or a list of ints.
	