@@ -1,3 +1,8 @@
+2007-02-16  Brian Granger <ellisonbg@gmail.com>
+
+	* ipython1.kernel.controllerservice.py: Improve documentation
+	and test coverage for the base controller implementation.
+
 2007-03-03  Fernando Perez  <Fernando.Perez@colorado.edu>
 
 	* ipython1/test/mkdoctests.py: Improve documentation for this
